# fastapi

./: .dockerignore  .env.example  .gitignore  Dockerfile  FastAPI_Tutorial_Notes.md  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run.sh  ui.py
app/: database.py  main.py  models.py  schemas.py
docs/: DOCKER.md  generate_diagrams.py
