[project]
name = "task-tracker-api"
version = "0.1.0"
description = "A REST API to manage tasks, backed by SQLite (FastAPI + SQLModel)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "sqlmodel>=0.0.39",
    "gradio>=5.0",
    "graphviz>=0.20",
]
